Fix Rabbi Klapper profile image to maintain round frame on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -3793,6 +3793,7 @@ blockquote {
     .profile-image {
         width: 120px;
         height: 120px;
+        border-radius: 50%;
         margin: 0 auto
     }
 
